kustomizations/iiif/cantaloupe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cantaloupe
spec:
  replicas: ${replicas:=1}
  strategy:
    rollingUpdate:
      maxUnavailable: ${maxUnavailable:=25%}
  template:
    spec:
      serviceAccount: iiif
      containers:
        - name: cantaloupe
          image: ghcr.io/elifesciences/cantaloupe:latest
          resources:
            requests:
              cpu: 300m
              memory: 600Mi
          ports:
            - name: http
              containerPort: 8182
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            tcpSocket:
              port: http
          volumeMounts:
            - name: iiif-journal-delegate-volume
              mountPath: /delegate/journal_delegate.rb
              subPath: journal_delegate.rb
      volumes:
        - name: iiif-journal-delegate-volume
          configMap:
            name: iiif-journal-delegate
            items:
            - key: journal_delegate.rb
              path: journal_delegate.rb
