kustomizations/iiif/cantaloupe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cantaloupe
spec:
  type: ClusterIP
  ports:
    - port: 8182
      targetPort: http
      protocol: TCP
      name: http
