kustomizations/iiif/cantaloupe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cantaloupe
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /iiif/2/$1:$2

    ## This fixes issues with encoded paths, such as the / encoded as %2F in lax:96357%2Felife-96357-fig2-figsupp1-v1.tif
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^ $request_uri?;
spec:
  rules:
  - host: ${hostname}
    http:
      paths:
        # rewrite either lax: or lax/ to lax:
        - path: ^/([^/:]+)[/:](.+\.(?!(?i)(?:webp)$)[^.]+)$
          pathType: ImplementationSpecific
          backend:
            service:
              name: cantaloupe
              port:
                number: 8182
  tls:
  - hosts:
    - ${hostname}
    secretName: ${hostname}-tls
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: cantaloupe-webp-rewrite
#   annotations:
#     elifesciences.org/description: |
#       This is here because the journal uses webp, but cantaloupe doesn't (yet) support it.
#       https://github.com/cantaloupe-project/cantaloupe/issues/710
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/rewrite-target: /iiif/2/$1:$2.jpg

#     ## This fixes issues with encoded paths, such as the / encoded as %2F in lax:96357%2Felife-96357-fig2-figsupp1-v1.tif
#     nginx.ingress.kubernetes.io/configuration-snippet: |
#       rewrite ^ $request_uri?;
# spec:
#   rules:
#   - host: ${hostname}
#     http:
#       paths:
#         # rewrite either lax: or lax/ to lax:
#         - path: ^/([^/:]+)[/:](.+)\.(?i)(?:webp)$
#           pathType: ImplementationSpecific
#           backend:
#             service:
#               name: cantaloupe
#               port:
#                 number: 8182
#   tls:
#   - hosts:
#     - ${hostname}
#     secretName: ${hostname}-tls
